syntax = "proto3";

package io.products.credential.domain;

option java_outer_classname = "CredentialDomain";


message CredentialState {
  string channelId = 1;
  string key = 2;
  string userId = 3;
  string value = 4;
}
